[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "aautils"
dynamic = ["version"]
requires-python = ">=3.7"
authors = [
  {name = "Cleber Rosa", email = "crosa@redhat.com"},
  {name = "Harvey James Lynden", email = "hlynden@redhat.com"},
  {name = "Jan Richter", email = "jarichte@redhat.com"},
]
maintainers = [
  {name = "Cleber Rosa", email = "crosa@redhat.com"},
  {name = "Harvey James Lynden", email = "hlynden@redhat.com"},
  {name = "Jan Richter", email = "jarichte@redhat.com"},
]
description = "Utility Libraries to power your tests (or general applications)"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Avocado", "testing", "utility", "library", "test"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Topic :: Software Development :: Testing"
]
[project.urls]
Homepage = "https://avocado-framework.github.io/autils.html"
Repository = "https://github.com/avocado-framework/aautils"

[tool.setuptools]
packages = ["autils"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
